--- a/FirstTestingProject/app/src/main/res/layout/card_view.xml
+++ b/FirstTestingProject/app/src/main/res/layout/card_view.xml
@@ -8,8 +8,8 @@
     >
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:background="?attr/colorPrimary"
         android:layout_centerHorizontal="true"
         android:orientation="vertical"
@@ -17,15 +17,15 @@
         >
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="49dp"
+            android:layout_height="49dp"
             android:layout_gravity="center"
             android:id="@+id/programm_photo"
             android:background="@drawable/button"/>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="49dp"
+            android:layout_height="49dp"
             android:layout_gravity="center"
             android:id="@+id/programm_name"
             android:textColor="#000000"/>
