--- a/FirstTestingProject/app/src/main/res/layout/span.xml
+++ b/FirstTestingProject/app/src/main/res/layout/span.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        />
+    android:background="@color/colorAccent"
+    android:id="@+id/span"
+    android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:id="@+id/diveder_text"/>
+        android:id="@+id/diveder_text"
+        android:textColor="#999999"/>
 </LinearLayout>
