--- a/FirstTestingProject/app/src/main/res/layout/settings.xml
+++ b/FirstTestingProject/app/src/main/res/layout/settings.xml
@@ -4,6 +4,10 @@
     android:background="#674580"
     android:padding="6dp"
     >
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/settingImage"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
