--- a/FirstTestingProject/app/src/main/res/layout/settings.xml
+++ b/FirstTestingProject/app/src/main/res/layout/settings.xml
@@ -84,6 +84,22 @@
             android:onClick="radioSetClick"
             android:layout_gravity="center"/>
     </RadioGroup>
+      <!--  <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="hide favorites"
+                android:id="@+id/equals"
+                android:onClick="checkEquals"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="reload"
+                android:onClick="reload"/>
+        </LinearLayout> -->
     </LinearLayout>
     <android.support.design.widget.BottomNavigationView
         xmlns:android="http://schemas.android.com/apk/res/android"
